--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ matrix:
         - export CARGO_INCREMENTAL=0
       script:
         - cargo update
-        - cargo test
+        - cargo test --all-features
         - cargo fmt -- --check
         - if [[ "${TRAVIS_PULL_REQUEST_BRANCH:-}" = release-* ]]; then cargo package; fi
 
@@ -32,14 +32,14 @@ matrix:
         - export CARGO_INCREMENTAL=0
       script:
         - cargo update
-        - cargo test
+        - cargo test --all-features
 
     - rust: nightly
       before_script:
         - export CARGO_INCREMENTAL=0
       script:
         - cargo update
-        - cargo test
+        - cargo test --features "handlebars tera"
 
     - rust: stable
       env: DEPLOY_API_DOC
