--- a/.travis.yml
+++ b/.travis.yml
@@ -23,17 +23,17 @@ matrix:
         - export CARGO_INCREMENTAL=0
       script:
         - cargo update
-        - cargo test --all-features
+        - cargo test --features "strict tera handlebars askama"
         - cargo test -p example-askama
         - cargo fmt -- --check
-        - if [[ "${TRAVIS_PULL_REQUEST_BRANCH:-}" = release-* ]]; then cargo package; fi
+        - if [[ "${TRAVIS_PULL_REQUEST_BRANCH:-}" = release-* ]]; then cargo publish --dry-run; fi
 
     - rust: beta
       before_script:
         - export CARGO_INCREMENTAL=0
       script:
         - cargo update
-        - cargo test --all-features
+        - cargo test --features "strict tera handlebars askama"
         - cargo test -p example-askama
 
     - rust: nightly
