update project metadata

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,30 +18,42 @@ matrix:
 
   include:
     - rust: stable
+      env: RUSTFLAGS="--cfg finchers_deny_warnings"
+      sudo: required
+      addons:
+        apt:
+          packages:
+            - libcurl4-openssl-dev
+            - libelf-dev
+            - libdw-dev
+            - binutils-dev
       before_script:
         - rustup component add rustfmt-preview
-        - export CARGO_INCREMENTAL=0
+        - cargo install cargo-update || true
+        - cargo install cargo-kcov || true
+        - cargo install-update -a
       script:
         - cargo update
-        - cargo test --features "strict tera handlebars askama"
+        - cargo test --all-features
         - cargo test -p example-askama
         - cargo fmt -- --check
         - if [[ "${TRAVIS_PULL_REQUEST_BRANCH:-}" = release-* ]]; then cargo publish --dry-run; fi
+      after_success:
+        - export RUSTFLAGS=""
+        - cargo kcov --print-install-kcov-sh | sh
+        - cargo kcov -v --coveralls
 
     - rust: beta
-      before_script:
-        - export CARGO_INCREMENTAL=0
+      env: RUSTFLAGS="--cfg finchers_deny_warnings"
       script:
         - cargo update
-        - cargo test --features "strict tera handlebars askama"
+        - cargo test --all-features
         - cargo test -p example-askama
 
     - rust: nightly
-      before_script:
-        - export CARGO_INCREMENTAL=0
       script:
         - cargo update
-        - cargo test --features "handlebars tera askama"
+        - cargo test --all-features
         - cargo test -p example-askama
 
     - rust: stable
@@ -50,14 +62,15 @@ matrix:
       script:
         - rm -rf target/doc
         - cargo update
-        - cargo doc --no-deps --features "handlebars tera askama"
+        - cargo doc --no-deps -p askama
+        - cargo doc --no-deps --all-features
         - rm -f target/doc/.lock
         - echo '<meta http-equiv="refresh" content="0;URL=finchers_template/index.html">' > target/doc/index.html
       deploy:
         provider: pages
         skip_cleanup: true
         github_token: $GH_TOKEN
-        repo: finchers-rs/finchers-template-tera
+        repo: finchers-rs/finchers-template
         target_branch: gh-pages
         local_dir: target/doc
         on:
