reorganize example codes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,10 @@ include = [
 
 [workspace]
 members = [
-  "crates/example-askama",
+  "examples/askama",
+  "examples/handlebars",
+  "examples/horrorshow",
+  "examples/tera",
 ]
 
 [package.metadata.docs.rs]
