--- a/examples/handlebars/Cargo.toml
+++ b/examples/handlebars/Cargo.toml
@@ -6,13 +6,13 @@ publish = false
 
 [[bin]]
 name = "example_handlebars"
-path = "main.rs"
+path = "src/main.rs"
 doc = false
 
 [dependencies]
 finchers = "0.13"
-finchers-template = { path = "../..", features = ["handlebars"], default-features = false }
+finchers-template = { path = "../..", features = ["handlebars"] }
+handlebars = "1"
 pretty_env_logger = "0.2.4"
 log = "0.4.5"
 serde = "1"
-handlebars = "1"
