--- a/examples/tera/Cargo.toml
+++ b/examples/tera/Cargo.toml
@@ -6,13 +6,13 @@ publish = false
 
 [[bin]]
 name = "example_tera"
-path = "main.rs"
+path = "src/main.rs"
 doc = false
 
 [dependencies]
 finchers = "0.13"
-finchers-template = { path = "../..", features = ["tera"], default-features = false }
+finchers-template = { path = "../..", features = ["tera"] }
+tera = "0.11"
 pretty_env_logger = "0.2.4"
 log = "0.4.5"
 serde = "1"
-tera = "0.11"
