--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "finchers-template"
-version = "0.1.2-dev"
+version = "0.2.0-dev"
 authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
 description = """
 Template engine support for Finchers.
@@ -22,10 +22,10 @@ include = [
 
 [package.metadata.docs.rs]
 features = [
-  "tera",
-  "handlebars",
-  "askama",
-  "horrorshow",
+  "use-tera",
+  "use-handlebars",
+  "use-askama",
+  "use-horrorshow",
 ]
 # FIXME: remove it as soon as the rustc version used in docs.rs is updated
 rustdoc-args = ["--cfg", "finchers_inject_extern_prelude"]
@@ -44,11 +44,22 @@ finchers = "0.13"
 failure = "0.1.2"
 futures = "0.1.24"
 http = "0.1.13"
-mime = "0.3.9"
-mime_guess = "2.0.0-alpha.6"
-serde = "1.0.79"
+lazy_static = "1.1.0"
 
 askama = { version = "0.7", optional = true }
 handlebars = { version = "1", optional = true }
 horrorshow = { version = "0.6", optional = true }
 tera = { version = "0.11", optional = true }
+
+mime = { version = "0.3.9", optional = true }
+mime_guess = { version = "2.0.0-alpha.6", optional = true }
+serde = { version = "1.0.79", optional = true }
+
+[dev-dependencies]
+matches = "0.1.8"
+
+[features]
+use-handlebars = ["handlebars", "mime", "mime_guess", "serde"]
+use-tera = ["tera", "mime", "mime_guess", "serde"]
+use-askama = ["askama", "mime_guess"]
+use-horrorshow = ["horrorshow"]
