--- a/examples/askama/Cargo.toml
+++ b/examples/askama/Cargo.toml
@@ -13,7 +13,7 @@ doc = false
 
 [dependencies]
 finchers = "0.13"
-finchers-template = { path = "../..", features = ["askama"] }
+finchers-template = { path = "../..", features = ["use-askama"] }
 askama = "0.7"
 pretty_env_logger = "0.2.4"
 log = "0.4.5"
