--- a/examples/handlebars/Cargo.toml
+++ b/examples/handlebars/Cargo.toml
@@ -11,7 +11,7 @@ doc = false
 
 [dependencies]
 finchers = "0.13"
-finchers-template = { path = "../..", features = ["handlebars"] }
+finchers-template = { path = "../..", features = ["use-handlebars"] }
 handlebars = "1"
 pretty_env_logger = "0.2.4"
 log = "0.4.5"
