--- a/examples/tera/Cargo.toml
+++ b/examples/tera/Cargo.toml
@@ -11,7 +11,7 @@ doc = false
 
 [dependencies]
 finchers = "0.13"
-finchers-template = { path = "../..", features = ["tera"] }
+finchers-template = { path = "../..", features = ["use-tera"] }
 tera = "0.11"
 pretty_env_logger = "0.2.4"
 log = "0.4.5"
