--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,6 @@ matrix:
   include:
     - rust: 1.29.1
     - rust: beta
-    - rust: nightly
 
     - rust: stable
       before_script:
@@ -38,6 +37,23 @@ matrix:
         - cargo fmt -- --check
         - cargo clippy
         - if [[ "${TRAVIS_PULL_REQUEST_BRANCH:-}" = release-* ]]; then cargo publish --dry-run; fi
+
+    - rust: nightly
+      sudo: required
+      addons:
+        apt:
+          packages:
+            - libssl-dev
+      before_script: |
+          which cargo +nightly tarpaulin --version || {
+            RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install --force cargo-tarpaulin
+          }
+      script: |
+          cargo update
+          cargo build --all-features
+      after_success: |
+          cargo +nightly tarpaulin --out Xml --all-features
+          bash <(curl -s https://codecov.io/bash)
 
     - rust: stable
       env: DEPLOY_API_DOC
