--- a/.travis.yml
+++ b/.travis.yml
@@ -28,15 +28,11 @@ matrix:
       before_script:
         - rustup component add rustfmt-preview clippy-preview
       script:
-        - cargo update
-        - cargo test --features use-handlebars
-        - cargo test --features use-tera
-        - cargo test --features use-askama
-        - cargo test --features use-horrorshow
-        - cargo build --all
-        - cargo fmt -- --check
-        - cargo clippy
-        - if [[ "${TRAVIS_PULL_REQUEST_BRANCH:-}" = release-* ]]; then cargo publish --dry-run; fi
+        - rake ci_flow
+        - >
+          if [[ "${TRAVIS_PULL_REQUEST_BRANCH:-}" = release-* ]]; then
+            cargo publish --dry-run
+          fi
 
     - rust: nightly
       sudo: required
@@ -44,27 +40,23 @@ matrix:
         apt:
           packages:
             - libssl-dev
-      before_script: |
-          which cargo +nightly tarpaulin --version || {
-            RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install --force cargo-tarpaulin
-          }
-      script: |
-          cargo update
-          cargo build --all-features
-      after_success: |
-          cargo +nightly tarpaulin --out Xml --all-features
-          bash <(curl -s https://codecov.io/bash)
+      before_script: >
+        cargo +nightly tarpaulin --version || {
+          RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install --force cargo-tarpaulin
+        }
+      after_success: >
+        cargo +nightly tarpaulin --out Xml --all-features && bash <(curl -s https://codecov.io/bash)
 
     - rust: stable
       env: DEPLOY_API_DOC
       before_script:
-      script:
-        - rm -rf target/doc
-        - cargo update
-        - cargo doc --no-deps --all-features -p askama -p tera -p handlebars -p horrorshow
-        - cargo doc --no-deps --all-features
-        - rm -f target/doc/.lock
-        - echo '<meta http-equiv="refresh" content="0;URL=finchers_template/index.html">' > target/doc/index.html
+      script: |
+        rm -rf target/doc
+        cargo update
+        cargo doc --no-deps --all-features -p askama -p tera -p handlebars -p horrorshow
+        cargo doc --no-deps --all-features
+        rm -f target/doc/.lock
+        echo '<meta http-equiv="refresh" content="0;URL=finchers_template/index.html">' > target/doc/index.html
       deploy:
         provider: pages
         skip_cleanup: true
