--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,17 @@ license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/finchers-rs/finchers-template.git"
 
+build = "build.rs"
+
 include = [
-  "Cargo.toml",
-  "build.rs",
-  "src/**/*",
-  "tests/**/*",
-  "examples/**/*",
-  "benches/**/*",
-  "LICENSE-MIT",
-  "LICENSE-APACHE",
+  "/Cargo.toml",
+  "/build.rs",
+  "/src/**/*",
+  "/tests/**/*",
+  "/examples/**/*",
+  "/benches/**/*",
+  "/LICENSE-MIT",
+  "/LICENSE-APACHE",
 ]
 
 [package.metadata.docs.rs]
@@ -57,6 +59,11 @@ serde = { version = "1.0.79", optional = true }
 
 [dev-dependencies]
 matches = "0.1.8"
+
+[dev-dependencies.cargo-husky]
+version = "1"
+default-features = false
+features = ["user-hooks"]
 
 [features]
 use-handlebars = ["handlebars", "mime_guess", "serde"]
